# golem-t13

./: README.md  main.py  pyproject.toml
models/: MLPClassifier.py
notebooks/: golem13.ipynb
src/: MLPClassifier.py  Pipeline.py
src/golem/: Pipeline.py
src/golem/modeling/: dataset.py  test.py  train.py
